# jlog

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/jlog/: library.h  log.h  os.h  string_help.h  tap.h
src/: library.cpp  os.cpp  string_help.cpp  tap.cpp
tests/: test_1.cpp
